<resources>
    <string name="app_name">xpense-tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Stats</string>
    <string name="title_notifications">Settings</string>
    <string name="expense">EXPENSE</string>
    <string name="income">INCOME</string>
    <string name="all">ALL</string>
    <string name="amount">amount</string>
    <string name="note">note</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="filterdate">DATE RANGE</string>
    <string name="date_picker_title">Pick a date for your expense</string>
    <string name="date_range_picker_title">Select a date range</string>
    <string name="home_title">HOME</string>
    <string name="stat_title">STAT</string>
    <string name="settings_title">SETTINGS</string>
    <string name="currency">currency</string>
    <string name="category">category</string>
    <string name="subcategory">subcategory</string>
    <string name="category_name">Category Name</string>
    <string name="subcategory_name">Subcategory Name</string>
    <string name="addnewcat">Add new Category</string>
    <string name="deletecat">Delete category</string>
    <string name="addnewsubcat">Add new Subcategory</string>
    <string name="deletesubcat">Delete selected subcategories</string>
    <string name="huf">HUF</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="shared_preference_file_name">com.xpense_tracker.app</string>
    <string name="shared_preference_currency_key">currency_key</string>


    <string name="cat_lists_title">Lists</string>
    <string name="cat_lists_description">
    Lists are continuous, vertical indexes of text or images.
  </string>
    <string name="mtrl_list_item_clicked">List item clicked</string>
    <string name="mtrl_list_item_one_line">One Line Item</string>
    <string name="mtrl_list_item_two_line">Two Line Item</string>
    <string name="mtrl_list_item_three_line">Three Line Item</string>
    <string name="mtrl_list_item_secondary_text">Secondary Text</string>
    <string name="mtrl_list_item_tertiary_text">Tertiary Text</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="logout_button">Logout</string>
</resources>